Fix kickoff crashing plasmashell after screen turnoff

If kickoff was opened rapidly after screen turned off,
it would crash. This fixes it.

BUG:478679